crates/oxc_react_compiler/tests/snapshots/async-destructured-parameter-unused-sibling.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-destructured-parameter-unused-sibling.js
---
function Component() {
	let count = 0;
	const run = _temp;
	run({
		safe: _temp2,
		bad: () => count++
	});
	return null;
}
function _temp2() {
	return null;
}
async function _temp(t0) {
	const { safe } = t0;
	await 0;
	safe();
}
