crates/oxc_react_compiler/tests/snapshots/async-factory-bound-unused-parameter.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-bound-unused-parameter.js
---
function Component(t0) {
	let count = 0;
	const make = _temp;
	const bound = make.bind(null, () => count++);
	const run = bound(_temp2);
	run();
	return null;
}
function _temp2() {
	return null;
}
function _temp(unused, callback) {
	return async () => {
		await 0;
		callback();
	};
}
