crates/oxc_react_compiler/tests/snapshots/async-factory-copied-array-spread-index-0.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-copied-array-spread-index-0.js
---
function Component() {
	let count = 0;
	const make = function make(...t0) {
		const callbacks = t0;
		return async () => {
			await 0;
			callbacks[0]();
		};
	};
	const args = [_temp, () => count++];
	const copied = [...args];
	const run = make(...copied);
	run();
	return null;
}
function _temp() {
	return null;
}
