crates/oxc_react_compiler/tests/snapshots/async-factory-destructured-unused-parameter.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-destructured-unused-parameter.js
---
function Component(t0) {
	let count = 0;
	const make = _temp;
	const run = make({
		unused: () => count++,
		callback: _temp2
	});
	run();
	return null;
}
function _temp2() {
	return null;
}
function _temp(t0) {
	const { callback } = t0;
	return async () => {
		await 0;
		callback();
	};
}
