crates/oxc_react_compiler/tests/snapshots/async-factory-returned-closure-safe-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-returned-closure-safe-overwrite.js
---
function Component(t0) {
	let count = 0;
	let cb = () => count++;
	const make = () => async () => {
		await 0;
		cb();
	};
	cb = _temp;
	const run = make();
	run();
	return null;
}
function _temp() {
	return null;
}
