crates/oxc_react_compiler/tests/snapshots/async-factory-returned-existing-closure-overwrite.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-returned-existing-closure-overwrite.js
---
function Component() {
	let count = 0;
	const cb = () => count++;
	let selected = _temp;
	const make = () => selected;
	const run = make();
	selected = async () => {
		await 0;
		cb();
	};
	run();
	return null;
}
async function _temp() {
	return null;
}
