crates/oxc_react_compiler/tests/snapshots/async-factory-returned-object-not-callable.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-factory-returned-object-not-callable.js
---
function Component(t0) {
	let count = 0;
	const cb = () => count++;
	const make = () => ({ run: async () => {
		await 0;
		cb();
	} });
	make();
	return null;
}
