crates/oxc_react_compiler/tests/snapshots/async-foreach-empty-array-parameter.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-foreach-empty-array-parameter.js
---
function Component() {
	const callbacks = [];
	callbacks.forEach(_temp);
	return null;
}
async function _temp(cb) {
	await 0;
	cb();
}
