crates/oxc_react_compiler/tests/snapshots/async-foreach-parameter-index.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/async-foreach-parameter-index.js
---
function Component() {
	let count = 0;
	const callbacks = [() => count++];
	callbacks.forEach(_temp);
	return null;
}
async function _temp(_, index) {
	await 0;
	return index;
}
